--- a/Grafton Blueville Church of the nazarene/index.html
+++ b/Grafton Blueville Church of the nazarene/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 <title>Grafton Blueville Church of the Nazarene</title>
 <link rel="stylesheet" type="text/css" href="theme.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
